# public-surface-sweeper

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release-artifacts.yml
docs/brand/: README.md
examples/: demo.py
examples/clean-repo/: AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md
examples/clean-repo/.github/workflows/: ci.yml
project-docs/crucible/: forward-delivery-measurements.json  forward-delivery-thesis.json
project-docs/specs/: SPEC-forward-facing-delivery-contract.md
src/public_surface_sweeper/: __init__.py  cli.py  delivery_contract.py  file_io.py  models.py  packet.py  readme_delivery.py  summary.py  sweeper.py  text_hygiene.py  workspace.py
tests/: test_sweeper.py  test_workspace.py
